replaced portraits with parallax image

--- a/src/scss/components/_home-about-normal.scss
+++ b/src/scss/components/_home-about-normal.scss
@@ -22,12 +22,16 @@ $layout-breakpoint-home-about: 1150px;
             }
 
             .home-about-portrait {
+                width: 100%;
+                height: 100%;
                 .potrait-container {
+                    width: 100%;
+                    height: 100%;
                     overflow: hidden;
-                    .home-about-portrait {
+
+                    .parallax-bg {
                         width: 100%;
                         height: 100%;
-                        object-fit: cover;
                     }
                 }
             }
