--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "components/home-about-responsive";
 @import "components/home-about-normal";
 @import "components/banner";
+@import "components/banner-smaller-device";
 
 body {
   background-color: $background;
