--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -2,6 +2,11 @@
     visibility: hidden;
     width: 100%;
     height: 100vh;
+
+    @media (max-width: $layout-breakpoint-small) {
+        display: none;    
+    }
+
     .banner-container {
         width: 100%;
         height: 100%;
@@ -26,7 +31,8 @@
                         margin-bottom: 4vh;
                         .my-name-text {
                             z-index: 2;
-                            font-size: 7rem;
+                            // font-size: 7rem;
+                            font-size: calc(clamp(5rem, 4.5vw, 8rem) * 0.875);
                             font-weight: 700;
                         }
 
@@ -43,6 +49,11 @@
                             font-weight: 500;
                             font-size: 2rem;
                             color: $text-color;
+
+                            @media (max-width: $layout-breakpoint-medium) {
+                                font-size: 1.5rem;
+
+                            }
                         }
                     }
 
