--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -56,6 +56,7 @@ $card-spacing: 3vw;
                             width: calc(clamp(5.5rem, 5vw, 6.5rem) * 0.875);
                             height: calc(clamp(5.5rem, 5vw, 6.5rem) * 0.875);
                             z-index: 10;
+                            display: table;
 
                             @media (max-width: $layout-breakpoint-medium) {
                                 right: 2.5em;
@@ -90,42 +91,58 @@ $card-spacing: 3vw;
                             }
 
                             .album-cover-dot-text-container {
+                                display: table-cell;
+                                vertical-align: middle;
+                                position: relative;
                                 text-align: center;
-                                display: table;
-                                width: 100%;
-                                height: 100%;
-                                z-index: 11;
-
-                                .album-cover-dot-text,
-                                .album-cover-dot-text-responsive {
-                                    display: table-cell;
-                                    vertical-align: middle;
-                                    position: relative;
+                                .album-cover-dot-text { 
                                     z-index: 11;
-                                    letter-spacing: 1px;
-                                    text-transform: uppercase;
-                                    font-weight: 700;
                                     color: $white;
-                                    font-size: 1rem;
-                                }
+                                    font-size: 1.8rem;
 
-                                @media (min-width: $layout-breakpoint-small) {
-                                    .album-cover-dot-text-responsive {
-                                        display: none;
-                                    }
-                                }
-
-                                @media (max-width: $layout-breakpoint-small) {
-                                    .album-cover-dot-text {
-                                        display: none;
-                                    }
-
-                                    .album-cover-dot-text-responsive {
-                                        font-weight: 200;
-                                        font-size: 2rem;
+                                    @media (max-width: $layout-breakpoint-small) {
+                                        font-size: 1.6rem;
                                     }
                                 }
                             }
+
+                            // .album-cover-dot-text-container {
+                            //     text-align: center;
+                            //     display: table;
+                            //     width: 100%;
+                            //     height: 100%;
+                            //     z-index: 11;
+
+                            //     .album-cover-dot-text,
+                            //     .album-cover-dot-text-responsive {
+                            //         display: table-cell;
+                            //         vertical-align: middle;
+                            //         position: relative;
+                            //         z-index: 11;
+                            //         letter-spacing: 1px;
+                            //         text-transform: uppercase;
+                            //         font-weight: 700;
+                            //         color: $white;
+                            //         font-size: 1rem;
+                            //     }
+
+                            //     @media (min-width: $layout-breakpoint-small) {
+                            //         .album-cover-dot-text-responsive {
+                            //             display: none;
+                            //         }
+                            //     }
+
+                            //     @media (max-width: $layout-breakpoint-small) {
+                            //         .album-cover-dot-text {
+                            //             display: none;
+                            //         }
+
+                            //         .album-cover-dot-text-responsive {
+                            //             font-weight: 200;
+                            //             font-size: 2rem;
+                            //         }
+                            //     }
+                            // }
                         }
 
                         .image-container {
