--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -81,65 +81,121 @@
                     grid-template-columns: 30% 70%;
 
                     .services-container {
+                        border-top: 1px solid $black;
                         overflow: hidden;
-                        .services-list {
-                            border-top: 1px solid $black;
-                            .services-column {
-                                background-color: $white;
-                                padding-block: 2rem;
-                                border-bottom: 1px solid $black;
 
-                                .accordion-header {
-                                    height: 50px;
+                        .accordion-wrapper {
+                            & + * {
+                                margin-top: 0.5em;
+                            }
+                        }
 
+                        .accordion-item {
+                            overflow: hidden;
+                            transition: max-height 0.3s cubic-bezier(1, 0, 1, 0);
+                            height: auto;
+                            max-height: 9999px;
+                        }
 
-                                    .accordion-header-grid {
-                                        width: 100%;
-                                        display: grid;
-                                        grid-template-columns: 20% 80%;
+                        .accordion-item.collapsed {
+                            max-height: 0;
+                            transition: max-height 0.35s cubic-bezier(0, 1, 0, 1);
+                        }
 
-                                        .service-index {
-                                            font-size: calc(clamp(1.6rem, 4vw, 3rem) * 0.875);
-                                        }
+                        .accordion-title {
+                            cursor: pointer !important;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            background-color: $white;
+                            padding-block: 2rem;
+                            border-bottom: 1px solid $black;
+                            font-weight: 500;
+                            font-size: calc(clamp(1.6rem, 4vw, 3rem) * 0.875);
 
-                                        .service-title-container {
-                                            width: 100%;
-                                            display: flex;
-                                            align-items: center;
-                                            justify-content: space-between;
-                                            .accordion-title {
-                                                font-weight: 500;
-                                                font-size: calc(clamp(1.6rem, 4vw, 3rem) * 0.875);
-                                            }
+                            &::after {
+                                content: "";
+                                width: 0;
+                                height: 0;
+                                border-left: 5px solid transparent;
+                                border-right: 5px solid transparent;
+                                border-top: 5px solid currentColor;
+                            }
 
-                                            .accordion-button {
-                                                .showmore-icon {
-                                                    font-size: calc(clamp(1.6rem, 4vw, 3.5rem) * 0.875);
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
+                            &:hover,
+                            &.open {
+                                color: black;
+                            }
 
-                                .accordion-item {
-                                    transition: max-height 0.5s cubic-bezier(1, 0, 1, 0);
-                                    height: 160px;
-                                    max-height: 9999px;
-
-                                    &.collapsed {
-                                        max-height: 0;
-                                        transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
-                                    }
-
-                                    .accordion-content {
-                                        .servivce-description {
-                                            padding-top: 55px;
-                                            font-size: calc(clamp(1.6rem, 4vw, 2rem) * 0.875);
-                                        }
-                                    }
+                            &.open {
+                                &::after {
+                                    content: "";
+                                    border-top: 0;
+                                    border-bottom: 5px solid;
                                 }
                             }
                         }
+
+                        .accordion-content {
+                            padding: 1em 1.5em;
+                        }
+                        // .services-list {
+                        //     border-top: 1px solid $black;
+                        //     .services-column {
+                        //         background-color: $white;
+                        //         padding-block: 2rem;
+                        //         border-bottom: 1px solid $black;
+
+                        //         .accordion-header {
+                        //             height: 50px;
+
+                        //             .accordion-header-grid {
+                        //                 width: 100%;
+                        //                 display: grid;
+                        //                 grid-template-columns: 20% 80%;
+
+                        //                 .service-index {
+                        //                     font-size: calc(clamp(1.6rem, 4vw, 3rem) * 0.875);
+                        //                 }
+
+                        //                 .service-title-container {
+                        //                     width: 100%;
+                        //                     display: flex;
+                        //                     align-items: center;
+                        //                     justify-content: space-between;
+                        //                     .accordion-title {
+                        //                         font-weight: 500;
+                        //                         font-size: calc(clamp(1.6rem, 4vw, 3rem) * 0.875);
+                        //                     }
+
+                        //                     .accordion-button {
+                        //                         .showmore-icon {
+                        //                             font-size: calc(clamp(1.6rem, 4vw, 3.5rem) * 0.875);
+                        //                         }
+                        //                     }
+                        //                 }
+                        //             }
+                        //         }
+
+                        //         .accordion-item {
+                        //             transition: max-height 0.5s cubic-bezier(1, 0, 1, 0);
+                        //             height: 160px;
+                        //             max-height: 9999px;
+
+                        //             &.collapsed {
+                        //                 max-height: 0;
+                        //                 transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
+                        //             }
+
+                        //             .accordion-content {
+                        //                 .servivce-description {
+                        //                     padding-top: 55px;
+                        //                     font-size: calc(clamp(1.6rem, 4vw, 2rem) * 0.875);
+                        //                 }
+                        //             }
+                        //         }
+                        //     }
+                        // }
                     }
                 }
             }
