about page fully done (also responsive)

--- a/src/scss/components/_home-about-responsive.scss
+++ b/src/scss/components/_home-about-responsive.scss
@@ -67,8 +67,8 @@
 
                     .home-about-responsive-paragraphs {
                         .home-about-responsive-paragraph {
-                            line-height: 1.8;
-                            color: $black;
+                            line-height: 2;
+                            color: $text-color;
                             padding-block: 2rem;
                             font-size: calc(clamp(1.6rem, 8vw, 2rem) * 0.875);
                         }
